--- a/AppSecAssignment1/Web.config
+++ b/AppSecAssignment1/Web.config
@@ -10,16 +10,20 @@
 
     <sessionState mode ="InProc" timeout="1" />
 
+    
     <customErrors mode="On" defaultRedirect="~/CustomError/GenericError.htmL" >
       <error statusCode="404" redirect="~/CustomError/HTTP404.htmL"/>
       <error statusCode="403" redirect="~/CustomError/HTTP403.html"/>
     </customErrors>
     
+
   </system.web>
 
+  <appSettings>
+    <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
+  </appSettings>
 
-  
-  
+
   <connectionStrings>
     <add name="MYDBConnection" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\ziany\source\repos\AppSecAssignment1\AppSecAssignment1\App_Data\MYDB.mdf;Integrated Security=True" providerName=".NET Framework Data Provider for SQL Server" />
   </connectionStrings>
